Update package dependencies, enhance README for clarity, and implement CORS configuration in backend. Add ExerciseController for exercise management and refactor training block handling by removing user-related fields. Improve error logging in GlobalExceptionHandler and streamline training block service methods.