@@ -20,8 +20,14 @@ public class CorsConfig {
         // Allow credentials
         config.setAllowCredentials(true);
         
-        // Allow all origins (you can restrict this to specific domains in production)
-        config.setAllowedOriginPatterns(List.of("*"));
+        // Allow specific origins for development and production
+        // Note: Cannot use wildcard "*" with allowCredentials(true)
+        config.setAllowedOrigins(Arrays.asList(
+            "http://localhost:3000",  // React dev server
+            "http://localhost:3001",  // Alternative React dev port
+            "http://127.0.0.1:3000",
+            "http://127.0.0.1:3001"
+        ));
         
         // Allow all headers
         config.setAllowedHeaders(Arrays.asList("*"));
@@ -31,6 +37,9 @@ public class CorsConfig {
         
         // Allow exposed headers
         config.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        
+        // Set max age for preflight requests
+        config.setMaxAge(3600L);
         
         // Apply CORS configuration to all paths
         source.registerCorsConfiguration("/**", config);
